# ChangeLog for dev-ruby/ruby-glib2
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.57 2008/06/21 20:05:20 corsair Exp $

  09 Jan 2009; Mark Somerville <gentoo-ruby@scottishclimbs.com> +ruby-glib2-0.18.1-r1.ebuild:
  Removed rubyee and dropped keywords to testing.

  18 Dec 2008; gentoo-ruby@scottishclimbs.com +metadata.xml,
  +ruby-glib2-0.18.1.ebuild:
  Added ebuild for 0.18.1.

  21 Jun 2008; Markus Rothe <corsair@gentoo.org>
  ruby-glib2-0.16.0-r3.ebuild:
  Stable on ppc64; bug #227679

  20 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  ruby-glib2-0.16.0-r3.ebuild:
  stable x86, bug 227679

  19 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  ruby-glib2-0.16.0-r3.ebuild:
  alpha/ia64/sparc stable wrt #227679

  19 Jun 2008; Olivier Crête <tester@gentoo.org>
  ruby-glib2-0.16.0-r3.ebuild:
  Stable on amd64, bug #227679

  06 Apr 2008; Hans de Graaff <graaff@gentoo.org>
  ruby-glib2-0.16.0-r2.ebuild, ruby-glib2-0.16.0-r3.ebuild:
  Add missing pkgconfig dependency, fixing #216381

  06 Apr 2008; Hans de Graaff <graaff@gentoo.org>
  ruby-glib2-0.16.0-r2.ebuild, ruby-glib2-0.16.0-r3.ebuild:
  This version of ruby-glib2 does not work with ruby 1.9. Thanks for 
  Tarmo Tänav in #216367 for the suggested fix.

  28 Mar 2008; Hans de Graaff <graaff@gentoo.org> -ruby-glib2-0.14.1.ebuild,
  -ruby-glib2-0.15.0.ebuild, -ruby-glib2-0.16.0.ebuild,
  -ruby-glib2-0.16.0-r1.ebuild:
  Remove old versions

*ruby-glib2-0.16.0-r3 (28 Mar 2008)

  28 Mar 2008; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-glib2-0.16.0-glib-2.16.patch, +ruby-glib2-0.16.0-r3.ebuild:
  Add patch from upstream to allow compilation with glib 2.16. Closes #213393.
  Thank for leio for already providing the patch.

  17 Nov 2007; nixnut <nixnut@gentoo.org> ruby-glib2-0.16.0-r2.ebuild:
  Stable on ppc wrt bug 198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  ruby-glib2-0.16.0-r2.ebuild: